# stegoff

./: .gitignore  LICENSE  POST.md  README.md  REDTEAM_LOG.md  audit_st3gg.py  benchmark.py  benchmark_full.py  benchmark_results.json  pyproject.toml
benchmarks/: results.json  run_benchmarks.py
stegoff/: __init__.py  cli.py  guard.py  orchestrator.py  report.py
stegoff/detectors/: approval_lens.py  audio.py  authority.py  binary.py  framecheck.py  image.py  llm.py  polarization.py  prompt_injection.py  ragguard.py  semantic_classifier.py  semantic_training_data.py  text.py  trapsweep.py
stegoff/detectors/models/: semantic_clf.pkl  semantic_clf_metrics.json
stegoff/guards/: __init__.py  action_guard.py  fragment_guard.py
stegoff/ml/: __init__.py  classifier.py  dataset.py  dual_channel_model.py  heuristic_features.py  train_dual_channel.py  train_transformer.py  transformer_classifier.py  trap_classifier.joblib
stegoff/sanitizers/: __init__.py  audio.py  html.py  image.py  semantic.py  structured.py  text.py
stegoff/server/: __init__.py  app.py  middleware.py
stegoff/traps/: __init__.py  base.py  composite.py  runner.py
stegoff/utils/: __init__.py
tests/: attack_chain.py  auto_redteam.py  auto_redteam_report.json  auto_redteam_report.md  redteam_v4_results.json  test_agent_traps.py  test_audio_detector.py  test_classifier_robustness.py  test_composite_traps.py  test_false_positives.py  test_guard_decorator.py  test_html_sanitizer_redteam.py  test_injection_redteam.py  test_llm_injection.py  test_ml_classifier.py  test_ollama_redteam.py  test_orchestrator.py  test_pipeline_integration.py  test_prompt_injection.py  test_redteam.py  test_redteam_final.py  test_redteam_llm.py  test_sanitizers.py  test_semantic_detectors.py  test_semantic_redteam.py  test_server.py  test_stegg_adversarial.py  test_stegg_live.py  test_text_detectors.py
